# Luci

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
Luci/: __main__.py  app.py  config.py  db.py
Luci/gateway/: cli.py  telegram.py  voice.py
Luci/loop/: agent.py  models.py
Luci/memory/: consolidation.py
Luci/memory/episodic/: store.py
Luci/memory/procedural/: installer.py
Luci/memory/semantic/: supabase_store.py
Luci/ops/: brief.py  dashboard.py  release_gate.py  tracing.py
Luci/ops/static/: app.js  index.html
Luci/runtime/: session.py
Luci/tools/: apple.py  applications.py  calendar.py  experimental.py  learning.py  mcp_client.py  memory_admin.py  message.py  notes.py  outreach.py  registry.py  search.py
evals/: conftest.py  helpers.py
evals/deterministic/: test_models.py  test_skill_encoding.py  test_speakable.py  test_tool_trigger.py  test_working_memory.py
evals/judge/: anthropic_judge.py  test_response_quality.py
luci/: __main__.py  app.py  config.py  db.py
luci/gateway/: cli.py  telegram.py  voice.py
luci/loop/: agent.py  models.py
luci/memory/: __init__.py  consolidation.py
luci/memory/episodic/: store.py
luci/ops/: brief.py  dashboard.py  release_gate.py  tracing.py
luci/ops/static/: app.js  (+2 more)
luci/runtime/: session.py
luci/tools/: __init__.py  apple.py  applications.py  calendar.py  experimental.py  google_calendar.py  learning.py  mcp_client.py  memory_admin.py  message.py  notes.py  outreach.py  registry.py  search.py
scripts/: demo_seed.py  validate_skills.py
sql/: init_supabase.sql
(+4 files in other folders)
